--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 pandas 
-mlflow
+mlflow==2.9.2
 notebook
 numpy
 scikit-learn
 matplotlib
-python-box
+python-box==7.1.1
 pyYAML
 tqdm
-ensure
+ensure==1.0.4
 joblib
 types-PyYAML
 Flask
 Flask-Cors
--e .
+#-e .
